modules/3-kubernetes/modules/kubernetes-bookinfo/manifests/ratings.Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v1
  namespace: ${namespace}
  labels:
    app: ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v1
  template:
    metadata:
      labels:
        app: ratings
        version: v1
    spec:
      serviceAccountName: ratings
      containers:
        - name: ratings
          image: docker.io/istio/examples-bookinfo-ratings-v1:1.19.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
