modules/3-kubernetes/modules/kubernetes-bookinfo/manifests/details.Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: details
  namespace: ${namespace}
  labels:
    app: details
    service: details
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: details
