modules/3-kubernetes/modules/kubernetes-bookinfo/manifests/productpage.Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: ${namespace}
  labels:
    app: productpage
    service: productpage
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: productpage
