modules/3-kubernetes/modules/kubernetes-bookinfo/manifests/ratings.Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: ${namespace}
  labels:
    app: ratings
    service: ratings
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: ratings
