modules/3-kubernetes/modules/kubernetes-bookinfo/manifests/reviews.Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: ${namespace}
  labels:
    app: reviews
    service: reviews
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: reviews
